fix: corrects footer spacing and updates sitemap wording

--- a/src/layout/footer/footer.scss
+++ b/src/layout/footer/footer.scss
@@ -37,7 +37,7 @@ $textColor: #FFFFFF;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 0 130px;
+    padding: 0 5%;
 
     .sitemap-list {
       list-style: none;
@@ -66,6 +66,7 @@ $textColor: #FFFFFF;
         font-size: 16px;
         font-weight: bold;
         margin-bottom: 20px;
+        white-space: nowrap;
       }
 
     }
